home component modified

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -148,7 +148,7 @@ ul.tagUl li{
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.p:hover .trash {
+.preview:hover .trash {
     display: block;
     color: red;
 }
