--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,12 +1,4 @@
 .side li{
-	/*position: absolute;
-    left: 0px;
-    bottom: 0px;
-    right: 0;
-    top: 75px;
-    overflow: auto;
-    height: auto;
-    padding-top: 0px;*/
     margin-bottom: 5px;
 }
 .divider{
@@ -46,11 +38,16 @@
 
 }
 textarea{
-    /*width: 100%;*/
+    padding: 10px 100px 10px 20px;
     left: 348px;
-    position: relative;
-    width:100%;
+    position: absolute;
+    width:109%;
     border: 1px solid #f0f0f0;
+    max-height: 100%;
+    min-height: 810px;
+    height: 100%;
+    box-sizing: border-box;
+
 }
 .tag-input{
     position: absolute;
@@ -101,7 +98,7 @@ h3{
     padding-top: 4px;
     padding-bottom: 0px;
     line-height: 1.4em;
-
+    
 }
 ul .tagUl{
     list-style-type: none;
@@ -177,4 +174,12 @@ ul.tagUl li{
     top: 0;
     display: none;
     color: red;
+}
+.text{
+    font-size: 16px;
+    color: #333;
+    width: 270px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
