--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container-fluid cf">
 	<div class="row">
-		<div class=" col-xs-2 col-md-3  sidebar">
+		<div class="col-xs-3  sidebar">
 			<small>
 				<a (click) = "openAddForm()"><span class="glyphicon glyphicon-plus add"></span></a>
 			</small>
@@ -31,11 +31,9 @@
 						<li *ngFor = "let data of notesValue; let i = index "  class="preview">
 							<p  name="Note" [(ngModel)]="data.Note" ngDefaultControl (click)="getNoteData(data,i)" class="p" id="noteData">
 								{{data.Note}}
-							
-							<!-- <a class="glyphicon glyphicon-trash trash"  (click)="onRemoveNote(note,i)" ></a>	 -->
 							</p>
-							<a type='button'  class ="glyphicon glyphicon-trash pull-right trash" (click)="onRemoveNote(data,i)"></a>
-							<li>{{note}}
+							<a type='button'  class ="glyphicon glyphicon-trash pull-right trash" (click)="onAddNoteToTrash(data,i)"></a>
+							<li class="text">{{note}}
 						</li>
 					</div>
 					<div *ngIf="tag ">
@@ -44,14 +42,14 @@
 									{{data.Note}}
 							<span ><a type='button'  class ="glyphicon glyphicon-trash pull-right trash" (click)="onRemoveNote(data,i)"></a></span>
 							</p>
-							<li>{{note}}
+							<li class="text">{{note}}
 						</li>
 					</div>
 					<div *ngIf ="trashdata">
 						
 						<li *ngFor="let tnote of trashedNotes; let i = index "  class="preview">
 							<p name="Note" [(ngModel)]="tnote.Note" ngDefaultControl class="p">{{tnote.Note}}
-								<span><a class="glyphicon glyphicon-trash pull-right onTrash" (click)="onRemoveNoteFromTrash(tnote,i	)"></a></span>
+								<span><a class="glyphicon glyphicon-trash pull-right onTrash" (click)="onRemoveNoteFromTrash(tnote,i)"></a></span>
 							</p>
 						</li>
 						
@@ -60,16 +58,10 @@
 				
 			</div>
 		</div>
-	<!-- <div class="delete">
-			<a class="glyphicon glyphicon-trash" *ngIf='showAddInput'></a>
-		</div> -->
 		<div class="container-fluid ">
-			<div class=" col-md-9">
+			<div class=" col-xs-9">
 			
-				<form #f='ngForm' (keyup)='saveNote(f)' >
-					<!-- <div class="del">
-						<a class="glyphicon glyphicon-trash" *ngIf='showAddInput || getData' (click)="onRemoveNote(note,i)"></a>
-					</div> -->
+				<form #f='ngForm' (keyup)='saveNote(f)' *ngIf="showAddInput">
 					<div class="tag-input">
 						<tag-input *ngIf="!getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='title'
 								(onRemove)="onItemRemoved($event)"
@@ -89,17 +81,17 @@
 					</div>
 				</form>
 				<form  (keyup)='updateNote(noteValue)'  *ngIf='getData'>
-						<div class="tag-input">
-							<tag-input *ngIf="getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='noteValue.Title'
+					<div class="tag-input">
+						<tag-input *ngIf="getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='noteValue.Title'
 																(onRemove)="onItemRemoved($event)"
 																(onAdd)="onItemAdded($event)"
 																[editable]='true' (onTagEdited)="onTagEdited($event)">{{noteValue.Title}}
-							</tag-input>
-						</div>
-						<div class="note" >
-							<textarea *ngIf="getData" rows="100%" cols="100%" name="Note"  [(ngModel)]="noteValue.Note" >{{noteValue.Note}}</textarea>
-						</div>
-					</form>
+						</tag-input>
+					</div>
+					<div class="note" >
+						<textarea *ngIf="getData" rows="100%" cols="100%" name="Note"  [(ngModel)]="noteValue.Note" >{{noteValue.Note}}</textarea>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
