--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid cf">
 	<div class="row">
-		<div class="col-xs-3  sidebar">
+		<div class="col-xs-2 col-md-2 sidebar">
 			<small>
-				<a (click) = "openAddForm()"><span class="glyphicon glyphicon-plus add"></span></a>
+				<a  (click) = "openAddForm()"><span class="glyphicon glyphicon-plus add"></span></a>
 			</small>
 			<div >
 				<div class="dropdown">
@@ -30,25 +30,25 @@
 
 						<li *ngFor = "let data of notesValue; let i = index "  class="preview">
 							<p  name="Note" [(ngModel)]="data.Note" ngDefaultControl (click)="getNoteData(data,i)" class="p" id="noteData">
-								{{data.Note}}
+								{{data.Note | slice:0:25}}{{data.Note?.length < 25 ? '' : '...'}}
 							</p>
 							<a type='button'  class ="glyphicon glyphicon-trash pull-right trash" (click)="onAddNoteToTrash(data,i)"></a>
-							<li class="text">{{note}}
+							<li class="text">{{note | slice:0:25}}{{note?.length < 25 ? '' : '...'}}
 						</li>
 					</div>
 					<div *ngIf="tag ">
 						<li *ngFor="let data of tagdata ; let i = index "  class="preview" >
 							<p name="Note" [(ngModel)]="data.Note" ngDefaultControl (click)="getNoteData(data,i)" class="p" >
-									{{data.Note}}
+									{{data.Note | slice:0:25}}{{data.Note?.length < 25 ? '' : '...'}}
 							<span ><a type='button'  class ="glyphicon glyphicon-trash pull-right trash" (click)="onRemoveNote(data,i)"></a></span>
 							</p>
-							<li class="text">{{note}}
+							<li class="text" >{{note | slice:0:25}}{{note?.length < 25 ? '' : '...'}}
 						</li>
 					</div>
 					<div *ngIf ="trashdata">
 						
 						<li *ngFor="let tnote of trashedNotes; let i = index "  class="preview">
-							<p name="Note" [(ngModel)]="tnote.Note" ngDefaultControl class="p">{{tnote.Note}}
+							<p name="Note" [(ngModel)]="tnote.Note" ngDefaultControl class="p">{{tnote.Note | slice:0:25}}{{tnote.Note?.length < 25 ? '' : '...'}}
 								<span><a class="glyphicon glyphicon-trash pull-right onTrash" (click)="onRemoveNoteFromTrash(tnote,i)"></a></span>
 							</p>
 						</li>
@@ -59,10 +59,13 @@
 			</div>
 		</div>
 		<div class="container-fluid ">
-			<div class=" col-xs-9">
+			<div class="col-xs-8 col-md-8 ">
 			
-				<form #f='ngForm' (keyup)='saveNote(f)' *ngIf="showAddInput">
-					<div class="tag-input">
+			
+			
+				<form #f='ngForm' (keyup)='saveNote(f)' *ngIf="showAddInput || getData">
+					<div class="tag-input col-xs-12">
+						<!-- <div class="col-xs-12"> -->
 						<tag-input *ngIf="!getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='title'
 								(onRemove)="onItemRemoved($event)"
 								(onAdd)="onItemAdded($event)"
@@ -71,16 +74,18 @@
 						<tag-input *ngIf="getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='noteValue.Title'
 								(onRemove)="onItemRemoved($event)"
 								(onAdd)="onItemAdded($event)"
-								[editable]='true' (onTagEdited)="onTagEdited($event)">{{noteValue.Title}}
+								[editable]='true' (onTagEdited)="onTagEdited($event)">
 						</tag-input>
+					<!-- </div> -->
 					</div>
-					<div class="note" >
-
-						<textarea *ngIf="!getData" rows="100%" cols="100%" name="note" placeholder="note.." [(ngModel)]="note"></textarea >
-						<textarea *ngIf="getData" rows="100%" cols="100%" name="Note"  [(ngModel)]="noteValue.Note" >{{noteValue.Note}}</textarea>
+					<div class="note col-xs-12" >
+						<div class="col-xs-12" >
+							<textarea *ngIf="!getData" rows="100%" cols="100%" name="note" placeholder="note.." [(ngModel)]="note" ></textarea >
+							<textarea *ngIf="getData" rows="100%" cols="100%" name="Note"  [(ngModel)]="noteValue.Note" >{{noteValue.Note}}</textarea>
+						</div>
 					</div>
 				</form>
-				<form  (keyup)='updateNote(noteValue)'  *ngIf='getData'>
+				<!-- <form #u='ngForm' (keyup)='updateNote(noteValue)'  *ngIf='getData'>
 					<div class="tag-input">
 						<tag-input *ngIf="getData" name="title" [separatorKeyCodes]="[32]" [maxItems]='3' [(ngModel)]='noteValue.Title'
 																(onRemove)="onItemRemoved($event)"
@@ -91,7 +96,8 @@
 					<div class="note" >
 						<textarea *ngIf="getData" rows="100%" cols="100%" name="Note"  [(ngModel)]="noteValue.Note" >{{noteValue.Note}}</textarea>
 					</div>
-				</form>
+				</form> -->
+				
 			</div>
 		</div>
 	</div>
