--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div>
-	<nav class="navbar navbar-default ">
+	<nav class="navbar navbar-default nav">
 		<div class="container-fluid">
 			<ul class="nav navbar-nav pull-right">
 				<li *ngIf = 'isLoggedIn ' class="dropdown"><a href="" class="dropdown-toggle" data-toggle='dropdown'>{{isLoggedInUser}}<span class="caret"></span></a>
