--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -58,7 +58,7 @@ textarea{
     padding-left: 0px;
     margin-left: -15px;
     border-bottom: 1px solid #f0f0f0;
-
+    width: 126%;
 }
 .remove{
     color:red;
