--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -37,7 +37,7 @@
     bottom: 0;
     width: 363px;
     border-right: 1px solid #f0f0f0;
-
+    height: auto;
 }
 textarea{
     padding: 10px 100px 10px 20px;
@@ -120,7 +120,7 @@ ul.tagUl li{
 }
 .noteList{
     overflow: auto;
-    height: auto;
+    /*height: -webkit-fill;*/
     padding-top: 0px;
     height: 800px;
     margin-top: 10px;
